<resources>
    <string name="app_name">KinopoiskDasha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="kinopoisk">KinoPoisk</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="keyword">keyword</string>
    <string name="description">Описание</string>
    <string name="button_to_movies_screen">button to movies screen</string>
    <string name="movie_s_image">movie\'s image</string>
    <string name="movie_name">movie\'s name</string>
    <string name="rating">10.0</string>
    <string name="films_frame">film\'s frame</string>
    <string name="frames">Кадры</string>


    <plurals name="hours">
        <item quantity="one">Последний вход был %d час назад</item>
        <item quantity="two">Последний вход был %d часа назад</item>
        <item quantity="few">Последний вход был %d часа назад</item>
        <item quantity="many">Последний вход был %d часов назад</item>
        <item quantity="other">Последний вход был %d часов назад</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">Последний вход был %d минуту назад</item>
        <item quantity="two">Последний вход был %d минуты назад</item>
        <item quantity="few">Последний вход был %d минуты назад</item>
        <item quantity="many">Последний вход был %d минут назад</item>
        <item quantity="other">Последний вход был %d минут назад</item>
    </plurals>

    <plurals name="days">
        <item quantity="one">Последний вход был %d день назад</item>
        <item quantity="two">Последний вход был %d дня назад</item>
        <item quantity="few">Последний вход был %d дня назад</item>
        <item quantity="many">Последний вход был %d дней назад</item>
        <item quantity="other">Последний вход был %d дней назад</item>
    </plurals>
</resources>
