<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_movie"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/movie_s_image"
            android:foregroundGravity="top|center_horizontal"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start|top"
            android:layout_margin="10dp"
            android:contentDescription="@string/button_to_movies_screen"
            app:srcCompat="@drawable/baseline_keyboard_arrow_left_24" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="10dp"
            android:text="@string/rating"
            android:textColor="@color/cyan"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="10dp"
            android:text="@string/movie_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/tv_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <TextView
        android:id="@+id/tv_genres"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        tools:text="genres"
        android:textColor="@color/grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_text" />

    <TextView
        android:id="@+id/tv_movie_year_and_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        tools:text="1994-2004, USA"
        android:textColor="@color/grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_genres" />

    <TextView
        android:id="@+id/tv_frames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:text="@string/frames"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_year_and_country" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_frames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_frames" />

</androidx.constraintlayout.widget.ConstraintLayout>